--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,9 @@
     "output"
   ],
   "dependencies": {
-    "purescript-console": "^0.1.0"
+    "purescript-console": "^0.1.0",
+    "purescript-aff": "^0.11.0",
+    "purescript-transformers": "^0.6.1",
+    "purescript-exceptions": "^0.3.0"
   }
 }
