--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,8 @@
     "purescript-transformers": "^0.6.1",
     "purescript-exceptions": "^0.3.0",
     "purescript-unsafe-coerce": "^0.1.0"
+  },
+  "devDependencies": {
+    "purescript-strings": "^0.5.2"
   }
 }
