--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,5 @@
 {
   "name": "purescript-node-irc",
-  "version": "1.0.0",
   "moduleType": [
     "node"
   ],
@@ -11,13 +10,16 @@
     "output"
   ],
   "dependencies": {
-    "purescript-console": "^0.1.0",
-    "purescript-aff": "^0.11.0",
-    "purescript-transformers": "^0.6.1",
-    "purescript-exceptions": "^0.3.0",
-    "purescript-unsafe-coerce": "^0.1.0"
+    "purescript-prelude": "^2.1.0",
+    "purescript-console": "^2.0.0",
+    "purescript-aff": "^2.0.2",
+    "purescript-transformers": "^2.2.0",
+    "purescript-exceptions": "^2.0.0",
+    "purescript-unsafe-coerce": "^2.0.0",
+    "purescript-partial": "^1.2.0"
   },
   "devDependencies": {
-    "purescript-strings": "^0.5.2"
+    "purescript-strings": "^2.1.0",
+    "purescript-psci-support": "^2.0.0"
   }
 }
