Add license/author info to bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,7 @@
 {
   "name": "purescript-node-irc",
+  "license": "MIT",
+  "author": "Harry Garrood <harry@garrood.me>",
   "moduleType": [
     "node"
   ],
