--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "purescript-node-irc",
   "license": "MIT",
   "author": "Harry Garrood <harry@garrood.me>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hdgarrood/purescript-node-irc"
+  },
   "moduleType": [
     "node"
   ],
